<?xml version="1.0"?>
<package format="3">
  <name>communication_tests</name>
  <version>0.1.1</version>
  <description>Tests on the realtime capabilities of the ROS publish/subscribe communication mechanism</description>
  <maintainer email="sixplus@sjtu.edu.cn">Sixplus</maintainer>
  <license>BSD</license>
  <author email="sixplus@sjtu.edu.cn">Sixplus</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rt_tests_support</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>