<?xml version="1.0"?>
<package format="3">
  <name>rt_tests_support</name>
  <version>0.1.1</version>
  <description>Ros Real-Time Tests support library</description>

  <maintainer email="jonas.sticha@bmw-carit.de">Jonas Sticha</maintainer>
  <license>BSD</license>
  <author email="jonas.sticha@bmw-carit.de">Jonas Sticha</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
  </export>
</package>
